Changes for 1.6.3

 - [ZBX-812] fixed Windows agent crash when using incorrect third parameter in proc_info metric (Sasha)
 - [ZBX-809] fixed memory leak while processing proc.num metric under Win2008 (Sasha)
 - [ZBX-26] added support of iowait,interrupt,softirq and steal for system.cpu.util under Linux (Sasha)
 - [ZBX-806] fixed data loss of text values processed by proxy (Sasha)
 - [ZBX-805] fixed problem with lost actions when upgrading database to 1.6.x (Sasha)
 - [ZBX-772] trailing newline added in the end of exported xml (Vedmak)
 - [DEV-315] when graph shows current time values, ">>" character is shown near end time (Vedmak)
 - [DEV-311] added caching of dynamic SNMP indexes (Sasha)
 - [ZBX-685] fixed "System status" cell colors with 0 active triggers (Vedmak) 
 - [ZBX-799] fixed hosts massupdate with "new group" and "use profile" (Vedmak)
 - [ZBX-673] fixed problem with adding the graphs on an autodiscovered hosts (Sasha)
 - [ZBX-795] fixed SQL error when try to activate auto-login in profile (Vedmak)
 - [ZBX-794] fixed SQL error on login screen when postgre is used, small GUI typos fix (Vedmak)
 - [ZBX-702] events duration now counts weeks instead of months, small GUI typos fix (Vedmak)
 - [ZBX-537] Distributed monitoring: PosrgeSQL related fixes (Sasha)
 - [ZBX-792] fixed server memory leak in processing remote commands in actions (Dmitry)
 - [ZBX-537] Distributed monitoring: added update of Last chack and Last value fields (Sasha)
 - [ZBX-537] Distributed monitoring: fixed deadlocks (Sasha)
 - [ZBX-760] historical data is now available for "not supported" items (Vedmak)
 - [ZBX-789] fixed error when try to remove trigger comment (Vedmak)
 - [ZBX-782] added host name of deppending trigger (amach)
 - [ZBX-786] fixed undefined argument on graph delete (Artem)
 - [ZBX-776] changed disabled auto-logout indication (amach)
 - [ZBX-784] added extension to hosts when importing graph to template (Artem)